force-app/main/default/objects/Customer_Profile__c/Customer_Profile__c.object-meta.xml
<CustomObject>
    <description>information specific to the related opportunity for on boarding a customer</description>
    <label>Customer Profile</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Customer Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>