force-app/main/default/objects/Customer_Profile__c/fields/Autopay_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Agreed__c</fullName>
    <description>Field used in NCSP wizard for sales rep to indicate auto payment permission granted by a customer when submit for booking.</description>
    <label>Autopay Agreed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>