force-app/main/default/objects/Customer_Profile__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Profile (Billing Contact)</relationshipLabel>
    <relationshipName>Customer_Profile_Billing_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>