force-app/main/default/objects/Customer_Profile__c/fields/Billing_Contact_Email1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email1__c</fullName>
    <description>Field used in NCSP wizard for sales rep to view email of Billing contact and change email by going to the contact if its not correct.</description>
    <formula>Billing_Contact__r.Email</formula>
    <label>Billing Contact Email1</label>
    <type>Text</type>
</CustomField>