force-app/main/default/objects/Customer_Profile__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>