force-app/main/default/objects/Customer_Profile__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <description>Field used in NCSP wizard for sales rep to indicate Billing contact phone when submit for booking.</description>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>