force-app/main/default/objects/Customer_Profile__c/fields/Billing_for_Separator_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Billing_for_Separator_Sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Billing for Separator Sheets</label>
    <type>Checkbox</type>
</CustomField>