force-app/main/default/objects/Customer_Profile__c/fields/Charges_Waived__c.field-meta.xml
<CustomField>
    <fullName>Charges_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A PA model must be attached to the opportunity to indicate approval for waiving charges</inlineHelpText>
    <label>Charges Waived</label>
    <type>Checkbox</type>
</CustomField>