force-app/main/default/objects/Customer_Profile__c/fields/Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address__c</fullName>
    <label>Correspondence Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>