force-app/main/default/objects/Customer_Profile__c/fields/Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_City__c</fullName>
    <label>Correspondence City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>