force-app/main/default/objects/Customer_Profile__c/fields/Correspondence_Contact__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Profile (Correspondence Contact)</relationshipLabel>
    <relationshipName>Customer_Profile_Correspondence_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>