force-app/main/default/objects/Customer_Profile__c/fields/Correspondence_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_State_Province__c</fullName>
    <label>Correspondence State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>