force-app/main/default/objects/Customer_Profile__c/fields/Correspondence_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Zip_Postal_Code__c</fullName>
    <label>Correspondence Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>