force-app/main/default/objects/Customer_Profile__c/fields/Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_ID__c</fullName>
    <description>This value is pulled from the Upsell Customer ID field on the associated opportunity record</description>
    <formula>Opportunity__r.Upsell_Customer_ID__c</formula>
    <label>Customer Account ID</label>
    <type>Text</type>
</CustomField>