force-app/main/default/objects/Customer_Profile__c/fields/Customer_ID_for_Consolidated_Billing__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_for_Consolidated_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>filtered look up to the customer account table for North America- Secure Base only</description>
    <inlineHelpText>Enter the existing Customer Account you are selling to</inlineHelpText>
    <label>Customer ID for Consolidated Billing</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>2 AND ((1 AND 5) OR (3 AND 4))</booleanFilter>
        <filterItems>
            <field>IM_Customer_Account__c.Source_System__c</field>
            <operation>equals</operation>
            <value>SB NA</value>
        </filterItems>
        <filterItems>
            <field>IM_Customer_Account__c.IM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>IM_Customer_Account__c.Source_System__c</field>
            <operation>equals</operation>
            <value>ARCVMS Europe</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>IME</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notContain</operation>
            <value>IME</value>
        </filterItems>
        <infoMessage>This lookup will only return active North America or IME Customer Accounts from SecureBase and ARCVMS.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Customer Profile (Customer ID for Consolidated Billing)</relationshipLabel>
    <relationshipName>Customer_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>