force-app/main/default/objects/Customer_Profile__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer Name should match the contract not the opportunity account name- exceptions for large partner accounts may include location reference as part  of the name.</description>
    <inlineHelpText>Customer Name should match the contract not the opportunity account name- exceptions for large partner accounts may include location reference as part  of the name.</inlineHelpText>
    <label>Customer Name</label>
    <length>99</length>
    <type>Text</type>
</CustomField>