force-app/main/default/objects/Customer_Profile__c/fields/Customer_Reimbursement_for_Term_Fees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reimbursement_for_Term_Fees__c</fullName>
    <inlineHelpText>Does this opportunity require customer reimbursement for termination fees?</inlineHelpText>
    <label>Customer Reimbursement for Term. Fees?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>