force-app/main/default/objects/Customer_Profile__c/fields/Date_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Signed__c</fullName>
    <inlineHelpText>Effective Date of Customer Signature</inlineHelpText>
    <label>Date Contract Signed</label>
    <type>DateTime</type>
</CustomField>