force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Authorization_Number__c</fullName>
    <label>DM Authorization Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>