force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Box_Quantity__c</fullName>
    <label>DM Box Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>