force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Consolidated_Invoices__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Consolidated_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Consolidated Invoices</label>
    <type>Checkbox</type>
</CustomField>