force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Container_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Container_Quantity__c</fullName>
    <inlineHelpText>order in quantities of 1</inlineHelpText>
    <label>DM - Container Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>