force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Container_Type__c</fullName>
    <label>DM - Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>XT</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
            <value>
                <fullName>Dedicated Space</fullName>
            </value>
            <value>
                <fullName>DC1</fullName>
            </value>
            <value>
                <fullName>DC11</fullName>
            </value>
            <value>
                <fullName>DC13</fullName>
            </value>
            <value>
                <fullName>DC3</fullName>
            </value>
            <value>
                <fullName>DC40</fullName>
            </value>
            <value>
                <fullName>DC5</fullName>
            </value>
            <value>
                <fullName>DC7</fullName>
            </value>
            <value>
                <fullName>L Closed Container</fullName>
            </value>
            <value>
                <fullName>Medium Non Std</fullName>
            </value>
            <value>
                <fullName>MM01</fullName>
            </value>
            <value>
                <fullName>MM03</fullName>
            </value>
            <value>
                <fullName>PELI 1030</fullName>
            </value>
            <value>
                <fullName>PELI 1120</fullName>
            </value>
            <value>
                <fullName>PELI 1150</fullName>
            </value>
            <value>
                <fullName>PELI 1200</fullName>
            </value>
            <value>
                <fullName>PELI 1300 /HD1</fullName>
            </value>
            <value>
                <fullName>PELI 1400</fullName>
            </value>
            <value>
                <fullName>PELI 1450/HD2</fullName>
            </value>
            <value>
                <fullName>PELI 1500</fullName>
            </value>
            <value>
                <fullName>PELI 1520</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>