force-app/main/default/objects/Customer_Profile__c/fields/DB_R_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Type__c</fullName>
    <inlineHelpText>Press and hold control key to select multiple DB&amp;R Types</inlineHelpText>
    <label>DM Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Restoration Assurance Program</fullName>
            </value>
            <value>
                <fullName>Tape Catalog Manager</fullName>
            </value>
            <value>
                <fullName>Tape Vaulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>