force-app/main/default/objects/Customer_Profile__c/fields/Department_Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Billing_Code__c</fullName>
    <description>Non Standard setup- used for creating SKP shell</description>
    <label>Department Billing Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Not Dept Billed</fullName>
            </value>
            <value>
                <fullName>1-Storage Dept Billed to Owner</fullName>
            </value>
            <value>
                <fullName>2-Service Dept Bill to Reg. Dept</fullName>
            </value>
            <value>
                <fullName>3-Supply Dept Bill to Reg. Dept</fullName>
            </value>
            <value>
                <fullName>4-Storage-Owner, Service-Reg. Dept</fullName>
            </value>
            <value>
                <fullName>5-Service &amp; Supply to Reg. Dept</fullName>
            </value>
            <value>
                <fullName>6- Storage-Owner, Supply-Reg. Dept</fullName>
            </value>
            <value>
                <fullName>7-Stor-Owner, Serv &amp; Sup-Reg. Dept</fullName>
            </value>
            <value>
                <fullName>8-All to Master, Except Pro Stor</fullName>
            </value>
            <value>
                <fullName>9- Stor &amp; Serv-Owner, Sup-Reg. Dept</fullName>
            </value>
            <value>
                <fullName>A-Ref-Reg. Dept, Serv &amp; Stor Owner</fullName>
            </value>
            <value>
                <fullName>B-Ref &amp; Sup-Reg, Serv &amp; Stor-Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>