force-app/main/default/objects/Customer_Profile__c/fields/Department_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Department_Restricted__c</fullName>
    <description>Non Standard setup- used for creating SKP shell</description>
    <label>Department Restricted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>