force-app/main/default/objects/Customer_Profile__c/fields/Division_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Division_Enabled__c</fullName>
    <description>Non Standard setup- used for creating SKP shell</description>
    <label>Division Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>