force-app/main/default/objects/Customer_Profile__c/fields/DMS_Label_Quantities__c.field-meta.xml
<CustomField>
    <fullName>DMS_Label_Quantities__c</fullName>
    <inlineHelpText>Order in Quantities of 25</inlineHelpText>
    <label>DMS - Label Quantities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>