force-app/main/default/objects/Customer_Profile__c/fields/DMS_Label_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Label_Type__c</fullName>
    <label>DMS - Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Part Forms</fullName>
            </value>
            <value>
                <fullName>T Labels</fullName>
            </value>
            <value>
                <fullName>T Label Green</fullName>
            </value>
            <value>
                <fullName>T Label Orange</fullName>
            </value>
            <value>
                <fullName>Trans Combo</fullName>
            </value>
            <value>
                <fullName>Trans Pad</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>