force-app/main/default/objects/Customer_Profile__c/fields/DMS_Supply_Box_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>DMS_Supply_Box_Order_Qty__c</fullName>
    <inlineHelpText>Order in Quantities of 10</inlineHelpText>
    <label>DMS - Supply Box Order Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>