force-app/main/default/objects/Customer_Profile__c/fields/DMS_Supply_Box_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Supply_Box_Order_Type__c</fullName>
    <label>DMS - Supply Box Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>3.6</fullName>
            </value>
            <value>
                <fullName>Check Box</fullName>
            </value>
            <value>
                <fullName>Planner Carton</fullName>
            </value>
            <value>
                <fullName>X-Ray Box</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>