force-app/main/default/objects/Customer_Profile__c/fields/DMS_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Type__c</fullName>
    <label>DMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion Services</fullName>
            </value>
            <value>
                <fullName>Conversion Services with DRCI</fullName>
            </value>
            <value>
                <fullName>Image on Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>