force-app/main/default/objects/Customer_Profile__c/fields/File_Level_Descriptive_Data_Entry__c.field-meta.xml
<CustomField>
    <fullName>File_Level_Descriptive_Data_Entry__c</fullName>
    <description>Non Standard setup- used for creating SKP shell</description>
    <inlineHelpText>What will customer use for file level descriptive data entry?</inlineHelpText>
    <label>File Level Descriptive Data Entry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IL Sheets</fullName>
            </value>
            <value>
                <fullName>Out of Box</fullName>
            </value>
            <value>
                <fullName>IMConnect</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Customer List via Upload</fullName>
            </value>
            <value>
                <fullName>Key from Customised Sheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>