force-app/main/default/objects/Customer_Profile__c/fields/Free_Up_In__c.field-meta.xml
<CustomField>
    <fullName>Free_Up_In__c</fullName>
    <label>Free Up &amp; In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>