force-app/main/default/objects/Customer_Profile__c/fields/Government_Customer__c.field-meta.xml
<CustomField>
    <fullName>Government_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For collecting data for Service Address Country = USA or Canada, if customer is government customer or not</description>
    <label>Government Customer</label>
    <type>Checkbox</type>
</CustomField>